--- a/Exercicios/desafio012/estilo/style.css
+++ b/Exercicios/desafio012/estilo/style.css
@@ -13,8 +13,8 @@
 
 
 html, body {
-    min-height: 100vh;
-    background-color: darkgray;
+    min-height: 100vw;
+    background-color: rgba(2, 2, 2, 0.986);
     font-family: var(--fonte1) ;
 }
 
@@ -22,6 +22,7 @@ header {
     background-color: black;
     color: white;
     text-align: center;
+    border-radius: 5px;
     
 
 }
@@ -31,6 +32,7 @@ header > h1 {
     font-variant: small-caps;
     font-family: var(--fonte2);
     font-size: 7vw;
+    
 }
 
 header > p {
@@ -56,6 +58,8 @@ section {
     padding-left: 30px;
     font-family: var(--fonte3);
     font-size: 3.5vw;
+    border-radius: 5px;
+    
 }
 section > p {
     padding-bottom: 2em;
@@ -98,4 +102,5 @@ section#img02 {
      color: white;
      text-align: center;
      padding: 10px;
+     border-radius: 5px;
  }
